--- a/LAB-3/Jenkinsfile
+++ b/LAB-3/Jenkinsfile
@@ -36,7 +36,7 @@ pipeline{
         stage("Code Deploy: Docker-compose"){
             steps{    
                
-                sh "docker-compose down && docker-compose up -d"
+                sh "docker-compose up -d"
             }
         }
     }
