--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,31 @@
-FROM node:21
+# Stage 1
+FROM node:21 AS backend-builder
+
+# setup the working dir
 WORKDIR /app
+
+# code
 COPY . .
+
+# packages install
 RUN npm i
-COPY .env.sample .env
+
+# tests
+RUN npm run test
+
+# Stage 2
+FROM node:21-slim
+
+# setup the working dir
+WORKDIR /app
+
+# copy the above stage as compressed
+COPY --from=backend-builder /app .
+
+COPY .env.docker .env
+
+# Port
 EXPOSE 5000
+
+# App
 CMD ["npm", "start"]
