--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -22,7 +22,7 @@ WORKDIR /app
 # copy the above stage as compressed
 COPY --from=backend-builder /app .
 
-COPY .env.docker .env
+COPY .env.sample .env
 
 # Port
 EXPOSE 5000
