updated helm configs

--- a/Helm/Chart.yaml
+++ b/Helm/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: Helm
+name: helm
 description: A Helm chart for deploying frontend, backend, and MongoDB services
 version: 0.1.0
 
