--- a/kubernetes/frontend-deployment.yaml
+++ b/kubernetes/frontend-deployment.yaml
@@ -32,8 +32,7 @@ spec:
   ports:
   - port: 5173
     targetPort: 5173
-    nodePort: 30001
     protocol: TCP
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: frontend
