--- a/Helm/templates/frontend-service.yaml
+++ b/Helm/templates/frontend-service.yaml
@@ -8,7 +8,7 @@ spec:
     targetPort: {{ .Values.frontend.port }}
     nodePort: {{ .Values.frontend.nodePort }}
     protocol: TCP
-  type: NodePort
+  type: LoadBalancer
   selector:
     app: frontend
 
